# HazardHunter

./: .gitignore  HazardHunter.cabal  README.md  cabal.project  flake.nix
app/: Main.hs
src/: HazardHunter.hs
src/HazardHunter/: Engine.hs  Htmx.hs
