cabal-version:      2.4
name:               HazardHunter
version:            0.1.0.0
homepage:           https://github.com/web-apps-top/HazardHunter/README.md
bug-reports:        https://github.com/web-apps-top/HazardHunter/issues
synopsis:           Minesweeper like game - Find Hazards and Enter leaderboard
description:        HazardHunter is a mini web game based on the legendary Minesweeper game's logic.
                    Goal is to discover various Hazards by guessing their places on the board.
                    Best scores are stored in the leaderboard.
license-file:       LICENSE
author:             Fabien Boucher
maintainer:         web.apps.top@gmail.com
copyright:          2022 Fabien Boucher
extra-source-files:
    README.md

common common-options
    default-language: Haskell2010
    default-extensions: LambdaCase
                      , NoImplicitPrelude
                      , OverloadedStrings
                      , RecordWildCards
                      , NamedFieldPuns
                      , DeriveGeneric
                      , DataKinds
                      , OverloadedRecordDot
                      , QuasiQuotes
                      , TypeOperators
                      , TypeApplications
    ghc-options:      -Wall

    build-depends:    base < 5
                    , butler

library
    import:           common-options
    exposed-modules:  HazardHunter
    build-depends:
    hs-source-dirs:   src

executable HazardHunter
    import:           common-options
    main-is:          Main.hs

    build-depends:    HazardHunter

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
                      -threaded
